--- a/Study Pages Unit.html
+++ b/Study Pages Unit.html
@@ -96,8 +96,65 @@
                 <dd>Rows that belong to the table body</dd>
             </div>
             <div>
-                <dt>YEET</dt>
-                <dd>Spacing between borders</dd>
+                <dt>CSS border property</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add bordefgfgrt of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
+            </div>
+
+            <div>
+                <dt>yeet</dt>
+                <dd>Add borders to any part of a web table</dd>
             </div>
         </dl>
     </body>
